--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             height: 510px;
 
         }
-		h1 {
+		        
+		h1{
 		text-align: center;
 		}
         </style>
@@ -55,13 +56,16 @@
         }
         var map = L.map('map', {
 			center: [-0.48, 37.97],
-            zoom: 3
+            zoomControl:true, maxZoom:28, minZoom:5
         }).fitBounds([[-6.1612361599255205,33.476318921467175],[5.760965191625617,45.31150208959645]])
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://www.openstreetmap.org/#map=6/0.172/37.904" target="_blank">Openstreetmap</a> &middot;<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
+            if (bounds_group.getLayers().length) {
+                map.fitBounds(bounds_group.getBounds());
+            }
             map.setMaxBounds(map.getBounds());
         }
         map.createPane('pane_OpenStreetMap_0');
@@ -70,8 +74,8 @@
             pane: 'pane_OpenStreetMap_0',
             opacity: 0.7,
             attribution: '',
-            minZoom: 6,
-            maxZoom: 15
+            minZoom: 5,
+            maxZoom: 28,
 
         });
         layer_OpenStreetMap_0;
@@ -97,16 +101,16 @@
                         <td colspan="2"><strong>County</strong><br />' + (feature.properties['County'] !== null ? autolinker.link(feature.properties['County'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>U5M in 2014</strong><br />' + (feature.properties['y2014'] !== null ? autolinker.link(feature.properties['y2014'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>U5M in 2014</strong><br />' + (feature.properties['y2014'] !== null ? autolinker.link(feature.properties['y2014'].toLocaleString()) : '') + ' per 1000 live births' + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Change in U5M from 1965-2014</strong><br />' + (feature.properties['Change_in_'] !== null ? autolinker.link(feature.properties['Change_in_'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Change in U5M between 1965-2014</strong><br />' + (feature.properties['Change_(19'] !== null ? autolinker.link(feature.properties['Change_(19'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Gap to achieving SDG 3.2</strong><br />' + (feature.properties['Gap_to_SDG'] !== null ? autolinker.link(feature.properties['Gap_to_SDG'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Gap towards achieving SDG 3.2</strong><br />' + (feature.properties['Gap_to_SDG'] !== null ? autolinker.link(feature.properties['Gap_to_SDG'].toLocaleString()) : '') + '</td>\
                     </tr>\
-                    <tr>\
-                        <td colspan="2"><strong>U5M rank (1-lowest U5M,  47-highest U5M)</strong><br />' + (feature.properties['U5M_rank'] !== null ? autolinker.link(feature.properties['U5M_rank'].toLocaleString()) : '') + '</td>\
+					<tr>\
+                        <td colspan="2"><strong>U5M rank (1-lowest U5M, 47-highest U5M)</strong><br />' + (feature.properties['U5M_rank'] !== null ? autolinker.link(feature.properties['U5M_rank'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
